# tc-data-creator-mcp

./: .gitignore  .mcp.debug.json  .mcp.json  LICENSE  QUICKSTART.md  README.md  example_mcp_config.json  force_restart_mcp.py  pyproject.toml  requirements.txt  restart_mcp_server.py  start_mcp_server.bat  test_mcp_manually.py
.claude/: settings.local.json
.claude/skills/executing-plans/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
src/tc_data_creator_mcp/: __init__.py  __main__.py  config.py  server.py  server_debug.py
src/tc_data_creator_mcp/data_loaders/: __init__.py  loader.py
src/tc_data_creator_mcp/synthesizers/: __init__.py  base.py  constraints_handler.py  factory.py  gaussian_copula.py  tvae.py
src/tc_data_creator_mcp/tools/: __init__.py  analyze.py  generate.py  validate.py
src/tc_data_creator_mcp/validators/: __init__.py  quality_validator.py
tests/: __init__.py  test_basic_generation.py
tests/fixtures/: sample_users.csv
