[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tc-data-creator-mcp"
version = "0.1.0"
description = "MCP server for generating realistic synthetic test data using SDV"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "mcp>=0.9.0",
    "sdv>=1.32.0,<2.0.0",
    "sdmetrics>=0.14.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tc-data-creator = "tc_data_creator_mcp.server:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
